appId: ${MAESTRO_APP_ID}
---
- runFlow: 01-login.yaml
- tapOn:
    text: "More|المزيد"
- tapOn:
    text: "Quotations|عروض الأسعار"
- assertVisible:
    text: "Search|بحث"
